@@ -1,47 +1,24 @@
 package uk.gov.hmcts.reform.prl.mapper.bundle;
 
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.TEST_UUID;
-import static uk.gov.hmcts.reform.prl.enums.YesOrNo.Yes;
-import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
-
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
-import org.junit.Assert;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.ccd.client.CoreCaseDataApi;
 import uk.gov.hmcts.reform.ccd.client.model.CategoriesAndDocuments;
 import uk.gov.hmcts.reform.ccd.client.model.Category;
-import uk.gov.hmcts.reform.prl.enums.CaseCreatedBy;
-import uk.gov.hmcts.reform.prl.enums.Gender;
-import uk.gov.hmcts.reform.prl.enums.YesNoDontKnow;
-import uk.gov.hmcts.reform.prl.enums.YesNoNotApplicable;
-import uk.gov.hmcts.reform.prl.enums.serviceofapplication.SoaCitizenServingRespondentsEnum;
-import uk.gov.hmcts.reform.prl.models.Address;
-import uk.gov.hmcts.reform.prl.models.Element;
-import uk.gov.hmcts.reform.prl.models.OrderDetails;
-import uk.gov.hmcts.reform.prl.models.Organisation;
-import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicList;
-import uk.gov.hmcts.reform.prl.models.common.dynamic.DynamicListElement;
-import uk.gov.hmcts.reform.prl.models.complextypes.PartyDetails;
-import uk.gov.hmcts.reform.prl.models.complextypes.citizen.User;
-import uk.gov.hmcts.reform.prl.models.complextypes.citizen.documents.ResponseDocuments;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
-import uk.gov.hmcts.reform.prl.models.dto.ccd.RespondentC8Document;
-import uk.gov.hmcts.reform.prl.models.dto.ccd.ServiceOfApplication;
-import uk.gov.hmcts.reform.prl.models.dto.ccd.ServiceOfApplicationUploadDocs;
-import uk.gov.hmcts.reform.prl.models.serviceofapplication.DocumentListForLa;
+
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class CategoriesAndDocumentsHelperTest {
@@ -57,7 +34,7 @@ class CategoriesAndDocumentsHelperTest {
     private final String authorization = "authToken";
 
     @Test
-    void getCategoriesAndDocuments() {
+    void shouldReturnGetCategoriesAndDocuments() {
 
         CaseData caseData = CaseData.builder()
             .id(12345L).build();
@@ -74,9 +51,25 @@ class CategoriesAndDocumentsHelperTest {
             .thenReturn(categoriesAndDocuments);
 
         List<Category> categories = categoriesAndDocumentsHelper.getCategoriesAndDocuments(authorization, caseData);
-        Assertions.assertNotNull(categories);
-        Assertions.assertEquals(1, categories.size());
-        Assertions.assertEquals(category.getSubCategories().getFirst().getCategoryId(), categories.getFirst().getCategoryId());
+        assertNotNull(categories);
+        assertEquals(2, categories.size());
+        assertEquals(category.getCategoryId(), categories.get(0).getCategoryId());
+        assertEquals(category.getSubCategories().getFirst().getCategoryId(), categories.get(1).getCategoryId());
 
+    }
+
+    @Test
+    void shouldReturnEmptyGetCategoriesAndDocuments() {
+
+        CaseData caseData = CaseData.builder()
+            .id(12345L).build();
+
+        CategoriesAndDocuments categoriesAndDocuments = new CategoriesAndDocuments(1, new ArrayList<>(), new  ArrayList<>());
+        when(coreCaseDataApi.getCategoriesAndDocuments(authorization, authTokenGenerator.generate(), String.valueOf(caseData.getId())))
+            .thenReturn(categoriesAndDocuments);
+
+        List<Category> categories = categoriesAndDocumentsHelper.getCategoriesAndDocuments(authorization, caseData);
+        assertNotNull(categories);
+        assertTrue(categories.isEmpty());
     }
 }
